@@ -1,4 +1,4 @@
-.\" $OpenBSD: sftp.1,v 1.48 2003/12/09 21:53:37 markus Exp $
+.\" $OpenBSD: sftp.1,v 1.49 2003/12/16 15:49:51 markus Exp $
 .\"
 .\" Copyright (c) 2001 Damien Miller.  All rights reserved.
 .\"
@@ -170,6 +170,8 @@ For full details of the options listed below, and their possible values, see
 .It PubkeyAuthentication
 .It RhostsRSAAuthentication
 .It RSAAuthentication
+.It ServerAliveInterval
+.It ServerAliveCountMax
 .It SmartcardDevice
 .It StrictHostKeyChecking
 .It TCPKeepAlive
